# python-uv-cookiecutter

./: Makefile  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_name_snake}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_name_snake}}/cli/: __init__.py
{{cookiecutter.project_name}}/tests/: test_package.py
