[project]
name = "{{cookiecutter.__project_name_snake}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.owner}} <{{cookiecutter.email}}>"]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "typer>=0.12.5",
]


[project.scripts]
{{cookiecutter.__project_name_kebab}} = "{{cookiecutter.__project_name_snake}}:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
